# SelfService-RainGear-TerminalSystem

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.zh-CN.md  data_insert.sql  data_insert2.0.sql  draft.sql  init_db.sql  test_sql.sql  系统详细分析报告.docx  系统详细设计与分析.md  项目总架构.md
Control/: ApiClient.cpp  ApiClient.h  DBHelper.h  DatabaseManager.cpp  DatabaseManager.h  SystemManger.cpp
Model/: GlobalEnum.hpp  RainGear.hpp  RainGearFactory.h  RainGear_subclasses.hpp  StationUtils.cpp  StationUtils.h  Stationlocal.cpp  Stationlocal.h  User.h
admin/: AdminMainWindow.cpp  AdminMainWindow.h
assets/: resources.qrc
assets/map/: map_config.json
client/: MainWindow.cpp  MainWindow.h  SlotItem.cpp  SlotItem.h  Styles.h  main.cpp
map_resources/: map.qrc  map_config.json
rgear_icons/: icons.qrc
server/: README.md  requirements.txt  run.bat  run.py
server/app/: __init__.py  config.py  database.py  models.py  utils.py
server/app/routes/: __init__.py  admin.py  gear.py  station.py  user.py
server/app/templates/: base.html
server/app/templates/admin/: dashboard.html  gears.html  records.html  stations.html
sql/: data_insert.sql
src/Model/: BorrowRecord.h  GlobalEnum.hpp  RainGear.hpp  Stationlocal.cpp  User.cpp  User.h
src/admin_ui/: MainWindow.cpp
src/client/: Styles.h
src/client_ui/assets/: Styles.h
src/client_ui/pages/: BorrowPage.cpp
src/control/: Admin_AuthService.cpp  Admin_AuthService.h  Admin_GearService.cpp  Admin_GearService.h  Admin_OrderService.cpp  Admin_OrderService.h  Admin_StationService.cpp  Admin_StationService.h  Admin_UserService.cpp  AuthService.cpp  AuthService.h  BorrowService.cpp  BorrowService.h  StationService.cpp  StationService.h
src/dao/: GearDao.cpp  GearDao.h  RecordDao.cpp  RecordDao.h  StationDao.cpp  StationDao.h  UserDao.cpp  UserDao.h
src/map_resources/: map.qrc  map_config.json
src/utils/: ConnectionPool.cpp  ConnectionPool.h  MapConfigLoader.h
